Version 0.61 (2015-05-18)
o Fixed problem with nd='fixed value' in ca
o mjca() has been made an S3 generic, with data.frame, table, and array methods

Version 0.60 (2015-03-01)
o Temporarily enabled plotting rows in plot.mjca 
o Use requireNamespace("rgl") in plot3d.ca.r to avoid NOTE in R CMD check

Version 0.59 (2015-01-29)

Version 0.58 (2014-12-31)
o mjca(): Added option 'reti' (logical, if TRUE returns the indicator matrix as $indmat). 
o mjca(): Fixed potentially negative eigenvalues (numerical issue; negative ev's are set to zero).
o mjca(): Burt matrices ($Burt) now with row- and columnnames.
o print.summary.ca(): Fixed scree plot.

Version 0.57 (2014-12-30)

o Fixed bug in print.summary.mcja re columns

o In plot.ca() and plot.mjca(), for labels=(1,1), don't offset the labels from the points


Version 0.56 (2014-11-04)

o Begin to assign dimnames to matrices from ca() and mjca()--- for now, just the coordinates matrices

o mjca() now returns an additional component, factors, containing factor names and levels, to facilitate plotting
  and manipulation. This can be used to customize the color, symbols, and labels in plots.

o summary.ca() gains rows= and columns= arguments that can be used like scree= to suppress parts of the output.

o summary.mjca() gains a similar columns= argument

o Fixed calls to rgl functions in plot3d.ca.r to avoid 'no global binding' warnings.

o Fixed bug in plot.mcja() with dimension percentages for lambda="adjusted"

Version 0.55 (2014-03-09)

o plot.ca() and plot.mjca() now provide sensible default xlab and ylab

o mjca() now accepts a table object as input, using internal expand.dft

o ca() has been made generic, accepting input in the form of matrices, data frames 
  (coerced to frequency tables), objects of class "xtabs" or "table" and one-sided
  formulae of the form ~ F1 + F2, where F1 and F2 are factors.

Version 0.54 (2014-01-05)

o Added xlab=, ylab= and lines= arguments to plot.ca().  The function now returns an