@@ -239,7 +239,7 @@ plot.mjca <- function(x,
  # rows
   if (!is.na(x[1]) & labels[1] != 1) {
     if (arrows[1]) {
-      arrows(rep(0, length(x[,1])), rep(0, length(x[,1])), x[,1], x[,2], col = col.x, length = 0.1) 
+      .arrows(rep(0, length(x[,1])), rep(0, length(x[,1])), x[,1], x[,2], col = col.x, length = 0.1) 
       } else {
       points(x[,1], x[,2], cex = cex.x, col = col.x, pch = x.pch)
       }
@@ -252,7 +252,7 @@ plot.mjca <- function(x,
  # columns
   if (!is.na(y[1]) & labels[2] != 1 ) {
     if (arrows[2]) {
-      arrows(rep(0, length(y[,1])), rep(0, length(y[,1])), y[,1], y[,2], col = col.y, length = 0.1) 
+      .arrows(rep(0, length(y[,1])), rep(0, length(y[,1])), y[,1], y[,2], col = col.y, length = 0.1) 
       } else {
       points(y[,1], y[,2], cex = cex.y, col = col.y, pch = y.pch)
       }
